# django-document-manager

./: .gitignore  CHANGELOG.md  CIRCULAR_DEPENDENCY_GUIDE.md  INSTALL_PRIVATE_DEPS.md  LICENSE  MANIFEST.in  README.md  UUID_GENERATION_GUIDE.md  build_and_test.py  manage.py  pyproject.toml  pytest.ini  requirements-private.txt  requirements.txt  run_tests.sh  runtests.py  setup.py  test_core_functionality.py  test_quick_validation.py  test_settings.py  verify_installation.py
core_build/: settings.py  urls.py
django_document_manager/: MIGRATION_GUIDE.md  __init__.py  admin.py  apps.py  catalogs.py  conf.py
django_document_manager/data/: document_types.json
django_document_manager/management/commands/: cleanup_documents.py  create_iso_3166.py  migrate_document_manager.py  populate_document_owner_uuids.py
django_document_manager/migrations/: 0001_initial.py  0002_add_user_relationships.py  0002_initial.py  0003_documentgroup_document_groups.py  0004_alter_documenttype_code.py  0005_documenttype_max_count_per_owner.py  0006_document_tag_document_idx_document_tag.py  __init__.py
django_document_manager/models/: __init__.py  catalogs.py  country.py  models.py  region.py
django_iso_3166/: __init__.py  apps.py
django_iso_3166/data/: cities.json  countries.json  example_world.sql  regions.json  states.json  subregions.json
django_iso_3166/management/commands/: bootstrap_from_sql.py  bootstrap_geo.py  create_iso_3166.py
django_iso_3166/migrations/: 0001_initial.py
django_iso_3166/models/: city.py  country.py  region.py  state.py  subregion.py
test_app/: README.md  __init__.py  apps.py  models.py
test_app/migrations/: __init__.py
test_app/tests/: __init__.py  test_core_functionality.py  test_in_groups.py  test_v0_2_7.py
tests/: settings.py  test_models.py
