[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-iso-3166"
version = "0.1.1"
description = "A Django app for managing geographical data including cities, countries, regions, states, and subregions."
authors = [
    {name = "Lorenzo Silva", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "geography", "iso3166", "countries", "cities", "states", "regions"]
dependencies = [
    "Django>=3.2,<6.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/django-iso-3166"
Repository = "https://github.com/yourusername/django-iso-3166"
"Bug Tracker" = "https://github.com/yourusername/django-iso-3166/issues"
Documentation = "https://github.com/yourusername/django-iso-3166#readme"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.900",
    "pre-commit>=2.0",
]
test = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "pytest-cov>=2.0",
]

[tool.setuptools]
packages = ["django_iso_3166"]
include-package-data = true

[tool.setuptools.package-data]
django_iso_3166 = ["data/*.json", "migrations/*.py"]