[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-document-manager"
version = "0.1.8"
description = "A comprehensive Django app for document management with versioning, validation, and AI processing."
authors = [
    {name = "Lorenzo Silva", email = "lorenzo.smb.rayo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "documents", "document-manager", "files", "versioning", "validation"]
dependencies = [
    "Django>=3.2,<6.0",
    "uuid6>=2025.0.0,<2026.0.0",
    # Note: django-crud-audit and django-catalogs are private dependencies
    # Install separately: pip install -r requirements-private.txt
]

[project.urls]
Homepage = "https://github.com/LorenzoSilvaMoore/django-document-manager"
Repository = "https://github.com/LorenzoSilvaMoore/django-document-manager"
"Bug Tracker" = "https://github.com/LorenzoSilvaMoore/django-document-manager/issues"
Documentation = "https://github.com/LorenzoSilvaMoore/django-document-manager#readme"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
]
test = [
    "pytest>=6.0",
    "pytest-django>=4.0",
]

[tool.setuptools]
packages = ["django_document_manager"]
include-package-data = true

[tool.setuptools.package-data]
django_document_manager = ["migrations/*.py", "data/*.json"]